--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,36 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 0;
+    margin: 0;
     font-family: "Rubik", "Arial", sans-serif;
     font-size: 16px;
     line-height: 22px;
     font-weight: 400;
-    color: #4a4b4c;
-    
+    background-color: #fff;
+    color: #4a4b4c;    
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 /* CONTAINER */
 
 .container {
     width: 100%;
-    max-width: 1160px;
+    max-width: 1260px;
     padding-left: 30px;
     padding-right: 30px;
     margin-left: auto;
@@ -27,12 +47,17 @@ body {
 
 .site-header-container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+}
+
+.site-header-logo {
+    margin-right: 40px;
 }
 
 .money {
     display: flex;
+    margin: 0;
+    margin-right: auto;
 }
 
 .moneys:not(:last-child) {
@@ -48,7 +73,28 @@ body {
     color: #555;
 }
 
+.lang {
+    display: flex;
+    padding: 3px;
+    background-color: #dce6ff;
+    border-radius: 39px;
+    margin-right: 25px;
+}
+
+.lang-link {
+    font-size: 13px;
+    line-height: 15px;
+    padding: 7px;
+    border-radius: 50%;
+    color: #000;
+    text-decoration: none;
+}
+
+.lang-link-active {
+    background-color: #fff;
+}
 .main-link {
+    display: inline-block;
     font-weight: 500;
     line-height: 19px;
     background-color: #7296ec;
@@ -56,4 +102,38 @@ body {
     padding: 13px 20px;
     text-decoration: none;
     border-radius: 10px;
+}
+
+.site-nav {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    text-align: center;
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    margin: 0;
+}
+
+.site-nav-item {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    color: #7f7f7f;
+    text-decoration: none;
+}
+
+.main-hr {
+    border: 1px solid #d1d1d1;
+    margin: 0;
+    margin-bottom: 40px;
+}
+
+.market-img {
+    display: block;
+    width: 1200px;
+    height: 128px;
+    border-radius: 8px;
+    margin: 0;
+    margin-bottom: 50px;
 }
