--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,10 @@ img {
     height: auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* CONTAINER */
 
 .container {
@@ -216,6 +220,12 @@ img {
     border-radius: 10px;
     margin-bottom: 15px;
 }
+
+.logo-link {
+    display: flex;
+    align-items: center;
+}
+
 .box-logo {
     width: 20px;
     height: 20px;
@@ -223,6 +233,7 @@ img {
     margin-right: 10px;
     padding: 0;
     margin: 0;
+    margin-right: 10px;
 }
 .box-span {
     font-size: 12px;
@@ -260,3 +271,171 @@ img {
     text-decoration: none;
     border-radius: 10px;
 }
+
+.main-bottom {
+    display: flex;
+    padding-bottom: 100px;
+}
+
+.box-bottom {
+    width: 797px;
+    display: flex;
+    margin-left: 0;
+}
+
+.box-img-bottom {
+    width: 210px;
+    height: 165px;
+    border-radius: 10px;
+    margin-right: 15px;
+}
+
+.box-bottom-link {
+    display: inline-block;
+    font-weight: 500;
+    line-height: 19px;
+    background-color: #eaeaea;
+    color: #000;
+    padding: 17px 343px;
+    margin-left: 0;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+.box-bottom-right-full {
+    flex-direction: column;
+    margin-left: 10px;
+}
+
+.box-bottom-right {
+    width: 393px;
+    margin-left: 0;
+    padding-bottom: 25px;
+}
+
+.bottom-right-main-heading {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #000;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+.box-bottom-right-text {
+    padding: 20px 0;
+    margin: 0;
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.box-bottom-right-text:last-child {
+    padding-bottom: 0;
+    border-bottom: 0;
+}
+
+.box-bottom-right-heading {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #000;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+.box-span-right {
+    font-size: 13px;
+    line-height: 15px;
+}
+
+.box-bottom-right-hr {
+    margin: 0;
+}
+
+.box-bottom-right-img {
+    width: 393px;
+    height: 338px;
+    border-radius: 15px;
+}
+
+footer {
+    background-color: #7297ef;
+    color: #fff;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.container-footer {
+    max-width: 1000px;
+}
+
+.site-footer-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-footer-text {
+    width: 230px;
+    font-size: 12px;
+    line-height: 19px;
+}
+
+.site-footer-link {
+    display: flex;
+}
+
+.site-footer-link ul {
+    padding: 0;
+    margin: 0;
+    margin-right: 100px;
+}
+
+.site-footer-link ul:last-child {
+    margin-right: 0;
+}
+
+.site-footer-link li {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.site-footer-link li:last-child {
+    margin-bottom: 0;
+}
+
+.site-footer-link a {
+    font-weight: 500;
+    line-height: 19px;
+    color: #fff;
+}
+
+.footer-hr {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    height: 1px;
+    background: #cecece;
+}
+
+.site-footer-bottom {
+    display: flex;
+}
+
+.site-footer-end {
+    width: 161px;
+    font-size: 18px;
+    line-height: 23px;
+    font-weight: 500;
+    margin: 0;
+    margin-right: auto;
+}
+
+.footer-list {
+    display: flex;
+    list-style: none;
+}
+
+.footer-link {
+    margin-right: 25px;
+}
+
