--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
 }
 
 img {
+    display: block;
     max-width: 100%;
     height: auto;
 }
@@ -167,6 +168,12 @@ a {
     margin-bottom: 50px;
 }
 
+
+/* MAIN */
+.main-content {
+    flex-grow: 1;
+}
+
 .article {
     display: flex;
     flex-wrap: wrap;
@@ -177,6 +184,8 @@ a {
 }
 
 .box {
+    display: flex;
+    flex-direction: column;
     width: 393px;
     background-color: #f6f6f6;
     padding: 20px 17px 15px;
@@ -184,29 +193,18 @@ a {
     margin-left: 10px;
     margin-bottom: 10px;
 }
+
 .box-heading {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 26px;
-    color: #000;
     padding: 0;
     margin: 0;
     margin-bottom: 10px;
 }
 
-.box-heading-one,
-.box-heading-four {
-    width: 358px;
-}
-
-.box-heading-two,
-.box-heading-three,
-.box-heading-five {
-    width: 346px;
-}
-
-.box-heading-six {
-    width: 338px;
+.box-heading-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 26px;
+    color: #000;
 }
 
 .box-description {
@@ -217,7 +215,9 @@ a {
 .box-img {
     width: 360px;
     height: 165px;
+    object-fit: cover;
     border-radius: 10px;
+    margin-top: auto;
     margin-bottom: 15px;
 }
 
@@ -241,6 +241,8 @@ a {
     color: #5e5f61;
 }
 
+/* NOTIFICATION */
+
 .notification {
     display: flex;
     justify-content: space-between;
@@ -250,7 +252,7 @@ a {
     background-repeat: no-repeat;
     width: 100%;
     max-width: 1050px;
-    padding: 24px 71px 24px 29px;
+    padding: 25px 71px 25px 25px;
     margin: 60px auto;
     font-weight: 500;
     font-size: 20px;
@@ -280,6 +282,7 @@ a {
 .box-bottom {
     width: 797px;
     display: flex;
+    flex-direction: unset;
     margin-left: 0;
 }
 
