--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ img {
 }
 
 a {
+    display: inline-block;
     text-decoration: none;
 }
 
@@ -279,11 +280,24 @@ a {
     padding-bottom: 100px;
 }
 
+/* BOX-BOTTOM */
+
 .box-bottom {
     width: 797px;
     display: flex;
+    align-items: flex-start;
     flex-direction: unset;
     margin-left: 0;
+    padding: 20px;
+}
+
+.box-bottom-left-heading {
+    font-size: 24px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #000;
+    margin: 0;
+    margin-bottom: 20px;
 }
 
 .box-img-bottom {
@@ -291,6 +305,10 @@ a {
     height: 165px;
     border-radius: 10px;
     margin-right: 15px;
+}
+
+.box-text {
+    flex-grow: 1;
 }
 
 .box-bottom-link {
@@ -306,12 +324,13 @@ a {
 }
 
 .box-bottom-right-full {
+    width: 393px;
     flex-direction: column;
+    margin-top: 49px;
     margin-left: 10px;
 }
 
 .box-bottom-right {
-    width: 393px;
     margin-left: 0;
     padding-bottom: 25px;
 }
@@ -332,6 +351,12 @@ a {
     border-bottom: 1px solid #d2d2d2;
 }
 
+.box-bottom-right-text h3 {
+    padding: 0;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
 .box-bottom-right-text:last-child {
     padding-bottom: 0;
     border-bottom: 0;
@@ -342,9 +367,6 @@ a {
     font-weight: 500;
     line-height: 24px;
     color: #000;
-    padding: 0;
-    margin: 0;
-    margin-bottom: 8px;
 }
 
 .box-span-right {
