--- a/css/styles.css
+++ b/css/styles.css
@@ -585,3 +585,15 @@ footer {
     opacity: 0.6;
 }
 
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) { 
+    .notification {
+        background: url("../img/fon@2x.png");
+    }
+
+}
