--- a/css/styles.css
+++ b/css/styles.css
@@ -291,10 +291,25 @@ a {
     margin: 0;
     margin-right: 10px;
 }
+
+.box-logo-article {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 30px;
+}
+
 .box-span { 
     font-size: 12px;
     line-height: 14px;
     color: #5e5f61;
+}
+
+.box-span-article {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #5E5F61;
 }
 
 /* NOTIFICATION */
@@ -353,6 +368,12 @@ a {
     flex-direction: unset;
     margin-left: 0;
     padding: 20px;
+}
+
+.box-bottom-left {
+    flex-direction: column;
+    padding: 0;
+    margin-top: 49px;
 }
 
 .box-bottom-left-heading {
@@ -591,6 +612,66 @@ footer {
 .link-logo:active {
     opacity: 0.6;
 }
+
+/* ARTICLE */
+.main-bottom-article {
+    padding: 0;
+}
+
+.article-heading {
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 36px;
+    color: #000000;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.article-img {
+    width: 797px;
+    height: 300px;
+    border-radius: 13px;
+    margin-bottom: 25px;
+}
+
+.article-paragraph {
+    margin-bottom: 60px;
+    padding-bottom: 50px;
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.article-text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #000000;
+    margin: 0;
+}
+
+.article-text:not(:last-child) {
+    margin: 0;
+    margin-bottom: 24px;
+}
+
+.extra-articles-heading {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    color: #000000;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.extra-articles {
+    display: flex;
+    padding-bottom: 100px;
+    margin-left: -10px;
+}
+
+.box-article {
+    margin-bottom: 0;
+}
+
 
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
