--- a/css/styles.css
+++ b/css/styles.css
@@ -491,6 +491,7 @@ a {
     height: 553px;
 }
 
+/* SITE-FOOTER */
 footer {
     background-color: #7297ef;
     color: #fff;
@@ -522,7 +523,6 @@ footer {
 
 .site-footer-top {
     display: flex;
-    justify-content: space-between;
 }
 
 .site-footer-text {
@@ -530,16 +530,19 @@ footer {
     font-size: 12px;
     line-height: 19px;
     margin: 0;
+    margin-right: 200px;
 }
 
 .site-footer-link {
     display: flex;
+    flex-grow: 1;
 }
 
 .site-footer-link ul {
     padding: 0;
     margin: 0;
-    margin-right: 100px;
+    width: 50%;
+    padding-left: 20px;
 }
 
 .site-footer-link-items {
@@ -571,8 +574,9 @@ footer {
 .footer-hr {
     margin-top: 30px;
     margin-bottom: 20px;
+    border: 0;
     height: 1px;
-    background: #cecece;
+    background-color: #cecece;
 }
 
 .site-footer-bottom {
