--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,10 @@ a {
     padding: 15px 20px 13px 40px;
     border: 0;
     border-radius: 60px;
+    background-image: url(../img/icon-search.svg);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: 15px center;
 }
 
 .lang {
